--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -36,7 +36,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +D3D12TargetedShaderFormats=PCD3D_SM6
 -D3D11TargetedShaderFormats=PCD3D_SM5
 +D3D11TargetedShaderFormats=PCD3D_SM5
-Compiler=Default
+Compiler=VisualStudio2022
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
@@ -86,4 +86,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.NetworkSettings]
+p.EnableMultiplayerWorldOriginRebasing=True
 
